Bug 274223 - kde ubuntu 11.04
Summary: kde ubuntu 11.04
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: Quick Tiling (show other bugs)
Version: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 280741 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-05-26 21:59 UTC by ustaudinger
Modified: 2011-09-10 20:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ustaudinger 2011-05-26 21:59:14 UTC
Application: kwin (4.6.2 (4.6.2))
KDE Platform Version: 4.6.2 (4.6.2)
Qt Version: 4.7.2
Operating System: Linux 2.6.38-8-generic i686
Distribution: Ubuntu 11.04

-- Information about the crash:
Kde crashed, i still try to find a solution about how to start kde on ubuntu 11.04. So far I always have to use ubuntu in safe mode - otherwise i see only a black screen and my mouse cursor. 
am using an asus eee box like pc with two screens. 
uninstalled already compiz. didn't help.

-- Backtrace:
Application: KWin (kwin), signal: Segmentation fault
[Current thread is 1 (Thread 0xb60e8720 (LWP 1654))]

Thread 2 (Thread 0xb2f7ab70 (LWP 1663)):
#0  0x00dd0416 in __kernel_vsyscall ()
#1  0x0097148c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
#2  0x008e43fd in pthread_cond_wait () from /lib/i386-linux-gnu/libc.so.6
#3  0x00c29817 in QTWTF::TCMalloc_PageHeap::scavengerThread (this=0xd3d1c0) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2359
#4  0x00c29851 in QTWTF::TCMalloc_PageHeap::runScavengerThread (context=0xd3d1c0) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1464
#5  0x0096ce99 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#6  0x008d673e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 1 (Thread 0xb60e8720 (LWP 1654)):
[KCrash Handler]
#7  KWin::Workspace::slotToggleFloating (this=0xb38cc318) at ../../kwin/tiling.cpp:442
#8  0x004b3c81 in KWin::Workspace::qt_metacall (this=0xb38cc318, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xbfaf46a8) at ./workspace.moc:564
#9  0x012d66ba in QMetaObject::metacall (object=0xb38cc318, cl=QMetaObject::InvokeMetaMethod, idx=155, argv=0xbfaf46a8) at kernel/qmetaobject.cpp:237
#10 0x012e64ff in QMetaObject::activate (sender=0x8e770d0, m=0x1e6b3f8, local_signal_index=1, argv=0xbfaf46a8) at kernel/qobject.cpp:3287
#11 0x015338d9 in QAction::triggered (this=0x8e770d0, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#12 0x01533b38 in QAction::activate (this=0x8e770d0, event=QAction::Trigger) at kernel/qaction.cpp:1257
#13 0x01000b8d in trigger (this=0x8e3b560, componentUnique=..., actionUnique=..., timestamp=117560) at /usr/include/qt4/QtGui/qaction.h:218
#14 KGlobalAccelPrivate::_k_invokeAction (this=0x8e3b560, componentUnique=..., actionUnique=..., timestamp=117560) at ../../kdeui/shortcuts/kglobalaccel.cpp:449
#15 0x010036d5 in KGlobalAccel::qt_metacall (this=0x8e1c888, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xbfaf4890) at ./kglobalaccel.moc:77
#16 0x012d66ba in QMetaObject::metacall (object=0x8e1c888, cl=QMetaObject::InvokeMetaMethod, idx=4, argv=0xbfaf4890) at kernel/qmetaobject.cpp:237
#17 0x012e64ff in QMetaObject::activate (sender=0x8e0e8f0, m=0x11725c4, local_signal_index=0, argv=0xbfaf4890) at kernel/qobject.cpp:3287
#18 0x0111d79b in OrgKdeKglobalaccelComponentInterface::globalShortcutPressed (this=0x8e0e8f0, _t1=..., _t2=..., _t3=117560) at kglobalaccel_component_interface.moc:150
#19 0x0111ddb7 in OrgKdeKglobalaccelComponentInterface::qt_metacall (this=0x8e0e8f0, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbfaf4a8c) at kglobalaccel_component_interface.moc:98
#20 0x006c7acd in QDBusConnectionPrivate::deliverCall (this=0x8d9d438, object=0x8e0e8f0, msg=..., metaTypes=..., slotIdx=5) at qdbusintegrator.cpp:942
#21 0x006d21d7 in QDBusCallDeliveryEvent::placeMetaCall (this=0x8fd46d0, object=0x8e0e8f0) at qdbusintegrator_p.h:103
#22 0x012e53b7 in QObject::event (this=0x8e0e8f0, e=0x8fd46d0) at kernel/qobject.cpp:1226
#23 0x0153ad24 in QApplicationPrivate::notify_helper (this=0x8da6ed0, receiver=0x8e0e8f0, e=0x8fd46d0) at kernel/qapplication.cpp:4462
#24 0x0153f8ce in QApplication::notify (this=0xbfaf52b4, receiver=0x8e0e8f0, e=0x8fd46d0) at kernel/qapplication.cpp:3862
#25 0x00fb23ca in KApplication::notify (this=0xbfaf52b4, receiver=0x8e0e8f0, event=0x8fd46d0) at ../../kdeui/kernel/kapplication.cpp:311
#26 0x004d0abf in KWin::Application::notify (this=0xbfaf52b4, o=0x8e0e8f0, e=0x8fd46d0) at ../../kwin/main.cpp:376
#27 0x012d00bb in QCoreApplication::notifyInternal (this=0xbfaf52b4, receiver=0x8e0e8f0, event=0x8fd46d0) at kernel/qcoreapplication.cpp:731
#28 0x012d3c79 in sendEvent (receiver=0x0, event_type=0, data=0x8d4af50) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#29 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x8d4af50) at kernel/qcoreapplication.cpp:1372
#30 0x012d3e0d in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1265
#31 0x015ef579 in sendPostedEvents (this=0x8d4aaa8, flags=...) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#32 QEventDispatcherX11::processEvents (this=0x8d4aaa8, flags=...) at kernel/qeventdispatcher_x11.cpp:75
#33 0x012cf289 in QEventLoop::processEvents (this=0xbfaf51f4, flags=...) at kernel/qeventloop.cpp:149
#34 0x012cf522 in QEventLoop::exec (this=0xbfaf51f4, flags=...) at kernel/qeventloop.cpp:201
#35 0x012d3ecc in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#36 0x015388e7 in QApplication::exec () at kernel/qapplication.cpp:3736
#37 0x004d35b2 in kdemain (argc=1, argv=0xbfaf5534) at ../../kwin/main.cpp:542
#38 0x080485bb in main (argc=1, argv=0xbfaf5534) at kwin_dummy.cpp:3

Reported using DrKonqi
Comment 1 Thomas Lübking 2011-05-26 23:14:31 UTC
The backtrace doesn't match your problem description. It hints a crash when removing a window out of the window tiling system.

The problem you describe is likely related to a broken OpenGL implementation.

a) you might try the xrender backend instead ("kcmshell kwincompositing" / advanced tab)
b) please specify your hardware and driver, in doubt attach the output of glxinfo
("asus eee box like" can mean intel or nvidia ION - in the latter case, try installing the nvidia CSS driver instead of nouveau)
c) neither compiz nor kwin developers are mad enough to block their functionality while the other one can be found on disk - that's not related ;-)
Comment 2 Thomas Lübking 2011-08-24 22:47:52 UTC
*** Bug 280741 has been marked as a duplicate of this bug. ***
Comment 3 Thomas Lübking 2011-08-24 22:49:22 UTC
D'ooh:

Client *c = activeClient();
if (tilingLayouts.value(c->desktop())) {
....

surprisingly there might be no active client at all, and then c is (drumroll) NULL.
Comment 4 Thomas Lübking 2011-09-10 07:39:55 UTC
Git commit 75021be9184da93c2410b37751bb0b9fdeb5de5a by Thomas Lübking.
Committed on 27/08/2011 at 20:03.
Pushed by luebking into branch 'KDE/4.7'.

Fix pointer accesses in tiling code

BUG: 274223
REVIEW: 102424

M  +3    -11   kwin/tile.cpp
M  +5    -2    kwin/tiling.cpp
M  +1    -1    kwin/tilinglayout.cpp

http://commits.kde.org/kde-workspace/75021be9184da93c2410b37751bb0b9fdeb5de5a
Comment 5 Thomas Lübking 2011-09-10 08:45:22 UTC
Git commit dbf4a2db09371171670a8f921f8e52b55b421bf6 by Thomas Lübking.
Committed on 10/09/2011 at 09:57.
Pushed by luebking into branch 'master'.

Fix pointer accesses in tiling code

Forward port of http://commits.kde.org/kde-workspace/75021be9184da93c2410b37751bb0b9fdeb5de5a
BUG: 274223

M  +3    -11   kwin/tiling/tile.cpp
M  +5    -2    kwin/tiling/tiling.cpp
M  +1    -1    kwin/tiling/tilinglayout.cpp

http://commits.kde.org/kde-workspace/dbf4a2db09371171670a8f921f8e52b55b421bf6
Comment 6 ustaudinger 2011-09-10 20:36:52 UTC
Thanks

On Sat, Sep 10, 2011 at 3:45 AM, Thomas Lübking
<thomas.luebking@gmail.com>wrote:

> https://bugs.kde.org/show_bug.cgi?id=274223
>
>
>
>
>
> --- Comment #5 from Thomas Lübking <thomas luebking gmail com>  2011-09-10
> 08:45:22 ---
> Git commit dbf4a2db09371171670a8f921f8e52b55b421bf6 by Thomas Lübking.
> Committed on 10/09/2011 at 09:57.
> Pushed by luebking into branch 'master'.
>
> Fix pointer accesses in tiling code
>
> Forward port of
>
> http://commits.kde.org/kde-workspace/75021be9184da93c2410b37751bb0b9fdeb5de5a
> BUG: 274223
>
> M  +3    -11   kwin/tiling/tile.cpp
> M  +5    -2    kwin/tiling/tiling.cpp
> M  +1    -1    kwin/tiling/tilinglayout.cpp
>
>
> http://commits.kde.org/kde-workspace/dbf4a2db09371171670a8f921f8e52b55b421bf6
>
> --
> Configure bugmail: https://bugs.kde.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You reported the bug.
>