Fix pointer accesses in tiling code

BUG: 274223
REVIEW: 102424